<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
<string name="app_name">HappyCube</string>
<string name="faceidswitchon">On</string>
<string name="faceidswitchoff">Off</string>
<string name="noid">None</string>
<string name="cubeid">DigitID</string>
<string name="red">R</string>
<string name="orange">O</string>
<string name="green">G</string>
<string name="blue">B</string>
<string name="yellow">Y</string>
<string name="white">W</string>
<string name="title">My Lord</string>
<string name="setcolor">My Lord, Pls tell me the cube faces\' color</string>
<string name="solvecube">CubeSolver</string>
<string name="hintcube">Camera Hints</string>
<string name="recheck">Colors changed, Pls recheck!</string>
<string name="play">Play</string>
<string name="pause">Pause</string>
<string name="nextStep">Next</string>
<string name="previousStep">Previous</string>
<string name="basicSolve">Junior</string>

<string name="fridchSolve">Junior+</string>
<string name="advancedSolve">Advanced</string>
<string name="reset">Reset</string>
<string name="hintofway1">Click below to take each side</string>
<string name="hintofway1step1">Take &quot;Front&quot; side 1st time</string>
<string name="hintofway1step2">Take Right face 2nd time</string>
<string name="hintofway1step3">Take &quot;Backt&quot; side 3rd time</string>
<string name="hintofway1step4">Take &quot;Left&quot; side 4th time</string>
<string name="hintofway1step5">Take &quot;Top&quot; side 5th time</string>
<string name="hintofway1step6">Take &quot;Bottom&quot; side 6th time</string>
<string name="hintofway2step1">Take 3 faces 1st time: Top, Front, Right</string>
<string name="hintofway2step2">Take 3 faces 2nd time: Bottom, Left, Back</string>
<string name="starttosolve">Solve it！</string><string name="start">Start</string>
<string name="randomcube">Play Cube</string>
<string name="origincube">Origin Cube</string>
<string name="cubesolver">Cube Solver</string>
<string name="mofangmiji">Tutorial</string>
<string name="restore">Load</string>
<string name="settings">Settings</string>
<string name="thanks">Thanks</string>
<string name="about">About</string>
<string name="help">Help</string>
<string name="exit">Exit</string>
<string name="check">Check</string>
<string name="complete">Solve</string>
<string name="camera">Camera</string>
<string name="idswitch">ID Switch:   </string>
<string name="size">Size（1-24）:</string>
<string name="speed">Rotate Speed（0-999）:</string>
<string name="shuffle">Shuffle（25-99）:</string>
<string name="study1">Study Yellow, White:</string>
<string name="study2">Study Red, Orange:</string>
<string name="study3">Study Blue, Green:</string>
<string name="save">Save</string>
<string name="cancel">Cancel</string>
<string name="switchid">ID Switch</string>
<string name="mainmenu">Main Menu</string>
<string name="cameraTimesLabel">Times to Take Picture</string>
<string name="cameraWay1">6</string>
<string name="cameraWay2">2</string>
<string name="cameraWay3">6A</string>
<string name="cameraWay4">2A</string>
<string name="loading">Loading Data for 1st run ...</string>
<string name="optionalway">Way To Solve</string>
<string name="grow">grow</string>
<string name="shrink">shrink</string>
<string name="animation">Animation</string>
<string name="step1.1">step1.1</string>
<string name="step1.2">step1.2</string>
<string name="step1.3">step1.3</string>
<string name="step1.4">step1.4</string>
<string name="step2.1">step2.1</string>
<string name="step3.1">step3.1</string>
<string name="step3.2">step3.2</string>
<string name="step3.3">step3.3</string>
<string name="step3.4">step3.4</string>
<string name="step3.5">step3.5</string>
<string name="step3.6">step3.6</string>
<string name="step4.1">step4.1</string>
<string name="step4.2">step4.2</string>
<string name="step4.3">step4.3</string>
<string name="step5.1">step5.1</string>
<string name="step5.2">step5.2</string>
<string name="step5.3">step5.3</string>
<string name="step6.1">step6.1</string>
<string name="step6.2">step6.2</string>
<string name="step6.3">step6.3</string>
<string name="step6.4">step6.4</string>
<string name="step6.5">step6.5</string>
<string name="step6.6">step6.6</string>
<string name="step6.7">step6.7</string>
<string name="step7.1">step7.1</string>
<string name="step7.2">step7.2</string>
<string name="step8.1">step8.1</string>
<string name="step8.2">step8.2</string>
<string name="step8.3">step8.3</string>
<string name="step8.4">step8.4</string>
<string name="demo">第一章  - 魔方求解示范</string>
<string name="concept">第1章 - 基本概念</string>
<string name="object1">第2章 - 目标</string>
<string name="object2">第3章 - 目标</string>
<string name="object3">第4章 - 目标</string>
<string name="object4">第5章 - 目标</string>
<string name="object5">第6章 - 目标</string>
<string name="object6">第7章 - 目标</string>
<string name="object7">第8章 - 目标</string>
<string name="object8">第9章 - 目标</string>
<string name="solution1">第2章 - 解法</string>
<string name="solution2">第3章 - 解法</string>
<string name="solutionoverview3">第4章 - 解法概述</string>
<string name="solutiondetails3">第4章 - 详细解法</string>
<string name="solutionoverview4">第5章 - 解法概述</string>
<string name="solutiondetails4">第5章 - 详细解法</string>
<string name="solutionoverview5">第6章 - 解法概述</string>
<string name="solutiondetails5">第6章 - 详细解法</string>
<string name="solutionoverview6">第7章 - 解法概述</string>
<string name="solutiondetails6">第7章 - 详细解法</string>
<string name="solutionoverview7">第8章 - 解法概述</string>
<string name="solutiondetails7">第8章 - 详细解法</string>
<string name="solutionoverview8">第9章 - 解法概述</string>
<string name="solutiondetails8">第9章 - 详细解法</string>

<string name="roadmap">第1章 - 路线图</string>
<string name="practise1">第2章 - 练习</string>
<string name="practise2">第3章 - 练习</string>
<string name="practise3">第4章 - 练习</string>
<string name="practise4">第5章 - 练习</string>
<string name="practise5">第6章 - 练习</string>
<string name="practise6">第7章 - 练习</string>
<string name="practise7">第8章 - 练习</string>
<string name="practise8">第9章 - 练习</string>

<string name="End">End</string>
<string name="Previous">Previous</string>
<string name="Next">Next</string>
<string name="TOC">TOC</string>
<string name="symbolrep1">symbolrep1</string>
<string name="symbolrep2">symbolrep2</string>
<string name="symbolrep3">symbolrep3</string>
<string name="symbolrep4">symbolrep4</string>
<string name="symbolrep5">symbolrep5</string>

<string name="chronometer_initial_format"><xliff:g id="initial-format">%s</xliff:g></string>
<string name="the9gamecenter">The9 Game Center</string>    
<string name="recovercubesuccess">Recover Cube Success！</string>

<string name="fmtGameName">游戏名：%s\n</string>
<string name="fmtVersion">版本号：%s\n</string>
<string name="fmtReleaser">发行商：%s\n</string>
<string name="fmtDeveloper">开发商：%s\n</string>
<string name="fmtPhone">客服电话：%s\n</string>
<string name="fmtEmail">客服email：%s\n</string>

<string name="Releaser">上海第九城市信息技术有限公司</string>
<string name="Developer">陈剑</string>
<string name="Phone">021-51729118</string>
<string name="Email">service@m.the9.com</string>
    
<string name="fmtAuthor">作者：%s\n</string>
<string name="fmtAuthorEmail">电邮：%s\n</string>
<string name="fmtCopyrightPeriod">版权所有    %s\n</string>
<string name="fmtLicense">本游戏遵循%s License\n</string>

<string name="Author">陈剑</string>
<string name="AuthorEmail">whogiawho@gmail.com</string>
<string name="CopyrightPeriod">2009-2011</string>
<string name="License">Apache2.0</string>
    
<string name="AchievementReachedAlready">已经获得该枚勋章！</string>

<string name="ScorePosted">Score posted.</string>
<string name="BlobUploaded">Blob uploaded.</string>
<string name="fmtErrScorePost">Error (%s) posting score.</string>
<string name="fmtErrBlobUpload">Error (%s) uploading blob.</string>
<string name="fmtReadingScore">"Error (%s) reading score."</string>

<string name="feedback">Feedback QQ: 1178278431</string>
<string name="chapter1">Chapter1  Roadmap And Concept</string>    
<string name="chapter2">Chapter2  顶上小花</string>
<string name="chapter3">Chapter3  底面十字</string>
<string name="chapter4">Chapter4  底面对好</string>
<string name="chapter5">Chapter5  底下两层复原</string>
<string name="chapter6">Chapter6  顶层十字</string>
<string name="chapter7">Chapter7  对好顶层</string>
<string name="chapter8">Chapter8  顶层角块调整</string>
<string name="chapter9">Chapter9  顶层棱块调整</string>
    
<string name="freecoins">Get Coins!</string>
</resources>
