<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button android:id="@+id/previous"
       	style="@style/wc"
    	android:text="@string/Previous"
    	android:layout_alignParentLeft="true"
    	android:layout_alignParentBottom="true">
    </Button>
    
   	<Button 
       	style="@style/wc"
   		android:text="@string/grow"
   		android:layout_alignParentBottom="true"
   		android:id="@+id/grow"
   		android:layout_toLeftOf="@id/toc">
    </Button>
        
    <Button android:id="@+id/toc"
       	style="@style/wc"
    	android:text="@string/TOC"
    	android:layout_centerHorizontal="true"
    	android:layout_alignParentBottom="true">
    </Button>
    
    <Button
       	style="@style/wc"
   		android:text="@string/shrink"
   		android:layout_alignParentBottom="true"
   		android:id="@+id/shrink"
   		android:layout_toRightOf="@id/toc">
    </Button>    

    <Button android:id="@+id/next" 
       	style="@style/wc"
       	android:text="@string/Next"
    	android:layout_alignParentRight="true"
    	android:layout_alignParentBottom="true">
    </Button>
        
</RelativeLayout>