<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <Button android:id="@+id/previous"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Previous"
    	android:layout_alignParentLeft="true"
    	android:layout_alignParentBottom="true">
    </Button>
    <Button android:id="@+id/toc"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/TOC"
    	android:layout_centerHorizontal="true"
    	android:layout_alignParentBottom="true">
    </Button>
    <Button android:id="@+id/next" 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/Next"
    	android:layout_alignParentRight="true"
    	android:layout_alignParentBottom="true">
    </Button>
</RelativeLayout>