<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    
    	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
	  		android:text="@string/thanks"
	  		android:gravity="center_horizontal"
	  		android:textSize="20dp"/>
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
			android:id="@+id/thanks"/>
		
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
	  		android:text="@string/about"
	  		android:gravity="center_horizontal"
	  		android:textSize="20dp"/>
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
			android:id="@+id/about"/>
		
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
	  		android:text="@string/help"
	  		android:gravity="center_horizontal"
	  		android:textSize="20dp"/>
		<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" 
			android:id="@+id/help"/>
						 
	</LinearLayout>

</ScrollView>